syntax = "proto3";

package pb;

message HelloRequest {
    string greeting = 1;
}

message HelloResponse {
    string reply = 1;
}

service HelloService {
    rpc NormalHello (HelloRequest) returns (HelloResponse);
    rpc PanicHello (HelloRequest) returns (HelloResponse);
    rpc ErrorHello (HelloRequest) returns (HelloResponse);
}